--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest --verbose",
     "lint": "ng lint"
   },
   "private": true,
@@ -21,8 +21,11 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@types/jest": "^29.5.0",
     "chart.js": "^3.9.1",
     "chartjs-adapter-luxon": "^1.3.0",
+    "jest": "^29.5.0",
+    "jest-preset-angular": "^13.0.1",
     "luxon": "^3.2.1",
     "ng2-charts": "^4.0.1",
     "rxjs": "~7.5.0",
@@ -38,17 +41,10 @@
     "@angular-eslint/template-parser": "14.0.0",
     "@angular/cli": "~14.0.4",
     "@angular/compiler-cli": "^14.0.0",
-    "@types/jasmine": "~4.0.0",
     "@types/luxon": "^3.2.0",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
     "eslint": "^8.18.0",
-    "jasmine-core": "~4.1.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.7.2"
   }
 }
