--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "jest --verbose",
+    "test:watch": "jest --watch --verbose",
     "lint": "ng lint"
   },
   "private": true,
