--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,10 +1,16 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-    "extends": "./tsconfig.json",
-    "compilerOptions": {
-        "outDir": "./out-tsc/spec",
-      "module": "CommonJs",
-      "types": ["jest"]
-    },
-    "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
+  "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "outDir": "./out-tsc/spec",
+    "module": "CommonJs",
+    "types": [
+      "jest"
+    ],
+    "target": "ES2016" // Required for tests using component harnesses to work reliably
+  },
+  "include": [
+    "src/**/*.spec.ts",
+    "src/**/*.d.ts"
+  ]
 }
