--- a/angular.json
+++ b/angular.json
@@ -93,8 +93,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:jest",
           "options": {
-            "tsConfig": "tsconfig.spec.json",
-            "polyfills": ["zone.js", "zone.js/testing"]
+            "tsConfig": "tsconfig.spec.json"
           }
         },
         "lint": {
